changing the song name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
 
             <img src="./img/images.jpeg" class="song-img" alt="">
-            <h1>All of Me</h1>
+            <h1>All of You </h1>
             <p>Song by John Legend </p>
 
             <audio   id="song">
