--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <img src="./img/images.jpeg" class="song-img" alt="">
             <h1>All of You </h1>
-            <p>Song by John Legend </p>
+            <p>Song by John Legend: really Amazing </p>
 
             <audio   id="song">
                 <source src="./img/John_Legend_-_All_of_Me_Naijamusics.com.mp3" type="audio/mp3">
